adding serializator method